update file about 2

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Đây là trang giới thiệu</h1>
+    <h1>Đây là trang giới thiệu 11</h1>
     <p>Lorem ipsum dolor sit amet consectetuisicing elit. Saepe explicabo dolorum quo nam. Perferendis, suscipit excepturi at eum temporibus, itaque obcaecati officia nesciunt inventore, repellendus consequatur voluptates sed quasi ea.</p>
+    <p>nội dung</p>
 </body>
 </html>
