add chuc nang cho login

--- a/login.html
+++ b/login.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>đây là trang đăng nhập</h1>
+    <div>chức năng khám phá</div>
+    <div>chức năng tìm kiếm</div>
 </body>
 </html>
