add content to index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>đây là trang chuss  </h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas facere similique reprehenderit quis nostrum sint ut aut ex perferendis cum, aspernatur fugit quae voluptate omnis? Dignissimos totam rerum accusantium necessitatibus?</p>
 </body>
 </html>
